--- a/css/global.css
+++ b/css/global.css
@@ -1,7 +1,3 @@
-:root {
-  --black: #010101;
-}
-
 * {
   box-sizing: border-box;
   margin: 0;
@@ -35,22 +31,19 @@ img {
 body {
   min-width: 320px;
   margin: 0 auto;
-  font-family: 'Montserrat', Arial, Helvetica, sans-serif;
+  font-family: "Montserrat", Arial, Helvetica, sans-serif;
   font-weight: 400;
   font-style: normal;
-  background-color: #ffffff;
-  color: #000;
-}
-
-.header {
-  padding-bottom: 46px;
+  color: #000000;
+  background-color: #e0fcff;
 }
 
 .container {
-  max-width: 1440px;
-  padding-left: 50px;
-  padding-right: 50px;
-  margin: 0 auto;
+  max-width: 1140px;
+}
+
+.main {
+  padding: 2em;
 }
 
 .list-reset {
@@ -76,18 +69,4 @@ body {
   margin: -1px;
   padding: 0;
   border: 0;
-}
-
-.title {
-  color: #010101;
-  font-family: Montserrat;
-  font-size: 49px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 50px;
-}
-
-.section {
-  padding-top: 53px;
-  padding-bottom: 53px;
 }
